[package]
name = "eips"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "allocator-fallback"]
std = ["skip-list/std"]
rustdoc_internals = []
allocator_api = [
    "allocator-fallback-crate?/allocator_api",
    "fixed-bump?/allocator_api",
    "skip-list/allocator_api",
]
allocator-fallback = [
    "allocator-fallback-crate",
    "fixed-bump?/allocator-fallback",
    "skip-list/allocator-fallback",
]

[dependencies]
cell-ref = "0.1"
tagged-pointer = "0.2"

[dependencies.allocator-fallback-crate]
package = "allocator-fallback"
version = "0.1"
optional = true

[dependencies.fixed-bump]
version = "0.2"
optional = true

[dependencies.skip-list]
path = "../skip-list"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[package.metadata.docs.rs]
default-features = false
features = ["allocator_api", "fixed-bump", "rustdoc_internals", "serde", "std"]
