[workspace]
members = ["test-cli", "benchmark"]

[package]
name = "eips"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
description = "Efficient intention-preserving sequence CRDT"
documentation = "https://docs.rs/eips"
readme = ".misc/package-readme.md"
repository = "https://github.com/taylordotfish/eips"
license = "AGPL-3.0-or-later"
categories = ["concurrency", "data-structures", "no-std"]
keywords = [
    "crdt",
    "sequence",
    "list",
    "conflict-free",
    "intention-preserving",
]

[features]
default = ["std", "allocator-fallback"]
std = ["skippy/std", "serde?/std"]
doc_cfg = []
allocator_api = [
    "fixed-bump/allocator_api",
    "skippy/allocator_api",
]
allocator-fallback = [
    "fixed-bump/allocator-fallback",
    "skippy/allocator-fallback",
]

[dependencies]
cell-ref = "0.1"
fixed-bump = "0.3"
fixed-typed-arena = "0.3.3"
integral_constant = "0.1"
tagged-pointer = "0.2.4"

[dependencies.skippy]
version = "0.1.0"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
btree-vec = "0.3.4"
rand_chacha = "0.9"

[dev-dependencies.rand]
version = "0.9"
default-features = false
features = ["std"]

[package.metadata.docs.rs]
default-features = false
features = [
    "allocator_api",
    "doc_cfg",
    "serde",
    "std",
]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(eips_debug)", "cfg(skippy_debug)"]
